# ufs_da_diagnostics

./: .gitignore  README.md  pyproject.toml
docs/: cadre2026_epic.rst  conf.py  developer_guide.rst  diagnostics_overview.rst  index.rst  installation.rst  quickstart.rst  usage_increment.rst  usage_log.rst  usage_logs.rst  usage_obs_diagnostic.rst  usage_observation_overview.rst  usage_observation_tools.rst  usage_plots.rst  usage_spectra.rst
docs/_static/: custom.css
docs/api/: increment.rst  log.rst  obs.rst  obs_diagnostic.rst  overview.rst  plots.rst  spectra.rst
examples/: diag_fv3-jedi-bkg_inc.yaml  diag_fv3-jedi-tiles.yaml  diag_fv3-jedi_obs.yaml  obs_diag.yaml  spectra_ana_inc.yaml  spectra_bkg_inc.yaml
ufs_da_diagnostics/: __init__.py
ufs_da_diagnostics/increment/: __init__.py  increment_maps_tiles.py
ufs_da_diagnostics/log/: __init__.py  parse_jedi_log.py
ufs_da_diagnostics/logs/: parse_jedi_log.py
ufs_da_diagnostics/obs/: __init__.py  obs_diagnostic.py
ufs_da_diagnostics/plots/: __init__.py  atms_hist.py  atms_latbins.py  atms_scan_position.py  atms_stats.py  atms_stats_extended.py  base_plotter.py  obs_diag_plotter.py  qc_plots.py  scalar_hist.py  spectra_plots.py  utils.py  utils_common.py  utils_loaders.py  vector_hist.py
ufs_da_diagnostics/spectra/: __init__.py  spectra_analysis_bkg_inc.py  spectra_analysis_tiles.py  spectra_core.py
