[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufs_da_diagnostics"
version = "0.1.0"
description = "Unified FV3-JEDI diagnostics and plotting tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Jong Kim"}]

dependencies = [
    "numpy",
    "matplotlib",
    "cartopy",
    "xarray",
    "netCDF4",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
ufsda-spectra-inc = "ufs_da_diagnostics.spectra.spectra_analysis_tiles:main"
ufsda-spectra-bkg-inc = "ufs_da_diagnostics.spectra.spectra_analysis_bkg_inc:main"
ufsda-inc-maps = "ufs_da_diagnostics.increment.increment_maps_tiles:main"
ufsda-obs-diag = "ufs_da_diagnostics.obs.obs_diagnostic:main"
ufsda-jedi-log = "ufs_da_diagnostics.log.parse_jedi_log:main"
